<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:id="@+id/addClassesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/classDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/classDate"
            android:minHeight="48dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/className"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/className"
            android:minHeight="48dp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/classTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/classTime"
            android:minHeight="48dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/classInstructor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/classInstructor"
            android:minHeight="48dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
