<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:gravity="center"
    android:padding="15dp"
    android:orientation="vertical"
    android:background="@color/teal_200">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/Login"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoginUsernameOrEmail"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColorHint="@color/black"
                android:hint="@string/UsernameEmailAddress"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:textSize="20sp"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="#ffffff" />
        <CheckBox
            android:id="@+id/loginCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/RememberMe" />

    </com.google.android.material.textfield.TextInputLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/buttonLogin"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="@string/LOGIN"
                android:textColor="#000000"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/registerNow"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/ClicktoRegister"
                android:textColor="#000000"
                android:minHeight="48dp" />



    </LinearLayout>

